--- a/项目2-客户申请保单/code/page_1.html
+++ b/项目2-客户申请保单/code/page_1.html
@@ -6,7 +6,8 @@
       <br>
       <div>提交表单后我们会和您联系获取信用卡信息，谢谢！</div>
       <!-- 新加 -->
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/style.css">
+      <script type="text/javascript" src="js/app.js"></script>
     </header>
     
     <body><div>登录 即可保存进度。</div></body>
