更新剩余需求

--- a/项目2-客户申请保单/code/在加居民出境旅游保险.html
+++ b/项目2-客户申请保单/code/在加居民出境旅游保险.html
@@ -5,11 +5,16 @@
     <div>登录 即可保存进度。</div>
     
     <!-- 新加 -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/geeks.css">
     <script type="text/javascript" src="js/app.js"></script>
   </header>
   
+  <br>
+
   <h3>在加居民出境旅游保险</h3>
+
+  <br>
+  
   <div>
     <label class="desc" id="title1" for="Field1">请确保受保人是否满足以下条件：</label>
     <ol>
@@ -33,6 +38,8 @@
     </ol>
   </div>
 
+  <br>
+
   <div>
     <legend id="title5" class="desc">
       受保人是否超过60岁（重要！！！在选“是”后在下方显示额外信息）
@@ -50,6 +57,8 @@
       </div>
     </div>
   </div>
+
+  <br><br>
 
   <div>
     <label class="desc" id="title1" for="Field1">请勾选以下符合的选线（此标题和下方几行内容需要隐藏，在上面选“是”以后才显示）</label><br>
@@ -70,6 +79,8 @@
       <label for="vehicle3">是否因为消化道疾病入院超过24小时</label></li>
     </ul>
   </div>
+
+  <br><br>
     
   <div>
     <label class="desc" id="title1" for="Field1">离开加拿大日期（改成日期格式）</label>
@@ -78,12 +89,16 @@
     </div>
   </div>
 
+  <br><br>
+
   <div>
     <label class="desc" id="title1" for="Field1">保险生效日期（改成日期格式）</label>
     <div>
       <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="8" tabindex="1">
     </div>
   </div>
+
+  <br><br>
 
   <div>
     <label class="desc" id="title1" for="Field1">保险结束日期（改成日期格式）</label>
@@ -92,6 +107,7 @@
     </div>
   </div>
 
+  <br><br>
 
   <div>
     <label class="desc" id="title1" for="Field1">目的地是否在美国？</label>
@@ -108,19 +124,28 @@
     </div>
   </div>
 
+  <br><br>
+
   <div>
     <label class="desc" id="title1" for="Field1">在美国哪个州 (如果上面目的地选择"是"，弹出此内容)</label>
     <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="8" tabindex="1">
   </div>
+
+  <br><br>
+
   <div>
     <label class="desc" id="title1" for="Field1">在美国停留天数（如果不停留，选择0） (如果上面目的地选择"是"，弹出此内容)</label>
     <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="8" tabindex="1">
   </div>
 
+  <br><br>
+
   <div>
     <label class="desc" id="title1" for="Field1">在哪个国家 (如果上面目的地选择"否"，弹出此内容：可改为下拉菜单)</label>
     <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="8" tabindex="1">
   </div>
+
+  <br><br>
 
   <div>
     <label class="desc" id="title1" for="Field1">保险类型</label>
@@ -141,6 +166,8 @@
         </li>
       </ul>
   </div>
+
+  <br><br>
 
   <div>
     <div>
