--- a/项目2-客户申请保单/code/留学生陪读父母保险.html
+++ b/项目2-客户申请保单/code/留学生陪读父母保险.html
@@ -5,11 +5,16 @@
     <div>登录 即可保存进度。</div>
     
     <!-- 新加 -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/geeks.css">
     <script type="text/javascript" src="js/app.js"></script>
   </header>
+
+  <br>
   
   <h3>留学生/陪读父母保险</h3>
+
+  <br>
+  
   <div>
     <label class="desc" id="title1" for="Field1">请确保受保人是否满足以下条件：</label>
     <ol>
@@ -35,6 +40,8 @@
       </li>
     </ol>
   </div>
+
+  <br>
 
   <div>
     <legend id="title5" class="desc">
@@ -72,6 +79,8 @@
       <label for="vehicle3">是否因为消化道疾病入院超过24小时</label></li>
     </ul>
   </div>
+
+  <br>
     
   <div>
     <label class="desc" id="title1" for="Field1">到达加拿大日期（改成日期格式）</label>
@@ -80,12 +89,16 @@
     </div>
   </div>
 
+  <br><br>
+
   <div>
     <label class="desc" id="title1" for="Field1">保险生效日期（改成日期格式）</label>
     <div>
       <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="8" tabindex="1">
     </div>
   </div>
+
+  <br><br>
 
   <div>
     <label class="desc" id="title1" for="Field1">保险结束日期（改成日期格式）</label>
@@ -94,7 +107,8 @@
     </div>
   </div>
 
-  
+  <br><br>
+
   <div>
     <div>
       <input type="button" onclick="location.href='file:///Users/jiangshaohua/Desktop/%E6%88%91/%E5%B7%A5%E4%BD%9C/%E5%AE%B6%E4%B8%AD%E6%8E%A8%E8%8D%90/Lavie%20financial/%E9%A1%B9%E7%9B%AE1/Project/%E9%A1%B9%E7%9B%AE2-%E5%AE%A2%E6%88%B7%E7%94%B3%E8%AF%B7%E4%BF%9D%E5%8D%95/code/page_3.html'" value="上一页">
