--- a/项目2-客户申请保单/code/访加旅客保险.html
+++ b/项目2-客户申请保单/code/访加旅客保险.html
@@ -5,11 +5,12 @@
     <div>登录 即可保存进度。</div>
     
     <!-- 新加 -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/geeks.css">
     <script type="text/javascript" src="js/app.js"></script>
   </header>
   
   <h3>访加旅客保险</h3>
+  <br>
   <div>
     <label class="desc" id="title1" for="Field1">请确保受保人是否满足以下条件：</label>
     <ol>
@@ -33,6 +34,8 @@
     </ol>
   </div>
 
+  <br>
+
   <div>
     <legend id="title5" class="desc">
       受保人是否超过60岁（重要！！！在选“是”后在下方显示额外信息）
@@ -49,10 +52,12 @@
         <label class="choice" for="Field5_1">否</label>
       </div>
     </div>
-  </div>
+  </div><br>
+
+  <br>
 
   <div>
-    <label class="desc" id="title1" for="Field1">请勾选以下符合的选线（此标题和下方几行内容需要隐藏，在上面选“是”以后才显示）</label><br><br>
+    <label class="desc" id="title1" for="Field1">请勾选以下符合的选线（此标题和下方几行内容需要隐藏，在上面选“是”以后才显示）</label>
     <ul style="list-style: none;">
       <li><input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
       <label for="vehicle1">问是否有心脏搭桥或者瓣膜置换手术（10年内）</label></li>
@@ -70,6 +75,8 @@
       <label for="vehicle3">是否因为消化道疾病入院超过24小时</label></li>
     </ul>
   </div>
+
+  <br><br>
     
   <div>
     <label class="desc" id="title1" for="Field1">到达加拿大日期（改成日期格式）</label>
@@ -78,6 +85,8 @@
     </div>
   </div>
 
+  <br><br>
+
   <div>
     <label class="desc" id="title1" for="Field1">保险生效日期（改成日期格式）</label>
     <div>
@@ -85,12 +94,16 @@
     </div>
   </div>
 
+  <br><br>
+
   <div>
     <label class="desc" id="title1" for="Field1">保险结束日期（改成日期格式）</label>
     <div>
       <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="8" tabindex="1">
     </div>
   </div>
+
+  <br><br>
 
   <div>
     <label class="desc" id="title1" for="Field1">保额选择</label>
@@ -123,6 +136,8 @@
     </div>
   </div>
 
+  <br><br>
+
   <div>
     <label class="desc" id="title1" for="Field1">起付额</label>
     <div>
@@ -152,6 +167,8 @@
       </div>
     </div>
   </div>
+
+  <br>
   
   <div>
     <div>
