Editing html file

--- a/项目2-客户申请保单/code/在加居民出境旅游保险.html
+++ b/项目2-客户申请保单/code/在加居民出境旅游保险.html
@@ -14,6 +14,15 @@
   <h3>在加居民出境旅游保险</h3>
 
   <br>
+
+  <div>
+    <div>
+      <input type="button" onclick="location.href='file:///Users/jiangshaohua/Desktop/%E6%88%91/%E5%B7%A5%E4%BD%9C/%E5%AE%B6%E4%B8%AD%E6%8E%A8%E8%8D%90/Lavie%20financial/%E9%A1%B9%E7%9B%AE1/Project/%E9%A1%B9%E7%9B%AE2-%E5%AE%A2%E6%88%B7%E7%94%B3%E8%AF%B7%E4%BF%9D%E5%8D%95/code/page_3.html'" value="上一页">
+      <input id="saveForm" name="saveForm" type="submit" value="提交">
+    </div>
+  </div>
+
+  <br>
   
   <div>
     <label class="desc" id="title1" for="Field1">请确保受保人是否满足以下条件：</label>
@@ -85,7 +94,7 @@
   <div>
     <label class="desc" id="title1" for="Field1">离开加拿大日期（改成日期格式）</label>
     <div>
-      <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="8" tabindex="1">
+      <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="20" tabindex="1">
     </div>
   </div>
 
@@ -94,7 +103,7 @@
   <div>
     <label class="desc" id="title1" for="Field1">保险生效日期（改成日期格式）</label>
     <div>
-      <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="8" tabindex="1">
+      <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="20" tabindex="1">
     </div>
   </div>
 
@@ -103,7 +112,7 @@
   <div>
     <label class="desc" id="title1" for="Field1">保险结束日期（改成日期格式）</label>
     <div>
-      <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="8" tabindex="1">
+      <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="20" tabindex="1">
     </div>
   </div>
 
