--- a/项目2-客户申请保单/code/留学生陪读父母保险.html
+++ b/项目2-客户申请保单/code/留学生陪读父母保险.html
@@ -17,7 +17,7 @@
 
   <div>
     <div>
-      <input type="button" onclick="location.href='file:///Users/jiangshaohua/Desktop/%E6%88%91/%E5%B7%A5%E4%BD%9C/%E5%AE%B6%E4%B8%AD%E6%8E%A8%E8%8D%90/Lavie%20financial/%E9%A1%B9%E7%9B%AE1/Project/%E9%A1%B9%E7%9B%AE2-%E5%AE%A2%E6%88%B7%E7%94%B3%E8%AF%B7%E4%BF%9D%E5%8D%95/code/page_3.html'" value="上一页">
+      <input id="page-button-9" name="page-button-backward" type="button" class="page-button" onclick="location.href='file:///Users/jiangshaohua/Desktop/%E6%88%91/%E5%B7%A5%E4%BD%9C/%E5%AE%B6%E4%B8%AD%E6%8E%A8%E8%8D%90/Lavie%20financial/%E9%A1%B9%E7%9B%AE1/Project/%E9%A1%B9%E7%9B%AE2-%E5%AE%A2%E6%88%B7%E7%94%B3%E8%AF%B7%E4%BF%9D%E5%8D%95/code/page_3.html'" value="上一页">
       <input id="saveForm" name="saveForm" type="submit" value="提交">
     </div>
   </div>
@@ -25,26 +25,30 @@
   <br>
   
   <div>
-    <label class="desc" id="title1" for="Field1">请确保受保人是否满足以下条件：</label>
-    <ol>
-      <li>年龄在15-89岁</li>
-      <li>未受保于加拿大公共医保(MSP)下</li>
-      <li>
+    <label class="desc" id="insured-condition-list-label" for="insured-condition-list">请确保受保人是否满足以下条件：</label>
+    <ol id="insured-condition-list" class="insured" name="insured-condition">
+      <li id="insured-condition-1" class="insured" name="insured-condition">
+        年龄在15-89岁
+      </li>
+      <li id="insured-condition-2" class="insured" name="insured-condition">
+        未受保于加拿大公共医保(MSP)下
+      </li>
+      <li id="insured-condition-3" class="insured" name="insured-condition">
         在开始旅行及申请保险时，受保人身体健康，旅行不是以寻求医疗咨询为目的
       </li>
-      <li>
+      <li id="insured-condition-4" class="insured" name="insured-condition">
         未被诊断为晚期病症
       </li>
-      <li>
+      <li id="insured-condition-5" class="insured" name="insured-condition">
         未被诊断为癌症3期/4期
       </li>
-      <li>
+      <li id="insured-condition-6" class="insured" name="insured-condition">
         在过去三个月内未接受过针对癌症的治疗
       </li>
-      <li>
+      <li id="insured-condition-7" class="insured" name="insured-condition">
         日常生活无需因健康状况导致的护理辅助
       </li>
-      <li>
+      <li id="insured-condition-8" class="insured" name="insured-condition">
         在加拿大全职/兼职上学，或是其陪读父母
       </li>
     </ol>
@@ -52,47 +56,50 @@
 
   <br>
 
-  <div>
-    <legend id="title5" class="desc">
+  <div id="insured-elder" class="insured" name="insured-elder">
+    <legend id="insured-elder-label" class="desc">
       受保人是否超过60岁（重要！！！在选“是”后在下方显示额外信息）
     </legend>
     
-    <div>
-      <input id="radioDefault_5" name="Field5" type="hidden" value="">
+    <div id="insured-elder-list" class="insured" name="insured-elder-list">
+      <input id="insured-elder-check" name="insured-elder-check" type="hidden" value="">
       <div>
-          <input id="Field5_0" name="Field5" type="radio" value="First Choice" tabindex="5" checked="checked">
-          <label class="choice" for="Field5_0">是</label>
+          <input id="insured-elder-yes" name="insured-elder-choice" type="radio" value="First Choice" tabindex="1" checked="checked">
+          <label class="choice" for="insured-elder-yes">是</label>
       </div>
       <div>
-        <input id="Field5_1" name="Field5" type="radio" value="Second Choice" tabindex="6">
-        <label class="choice" for="Field5_1">否</label>
+        <input id="insured-elder-no" name="insured-elder-choice" type="radio" value="Second Choice" tabindex="2">
+        <label class="choice" for="insured-elder-no">否</label>
       </div>
     </div>
   </div>
 
+  <br><br>
+
   <div>
-    <ul style="list-style: none;">
-      <li><input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-      <label for="vehicle1">问是否有心脏搭桥或者瓣膜置换手术（10年内）</label></li>
-      <li><input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-      <label for="vehicle3">问是否同时具有糖尿病和心脏病</label></li>
-      <li><input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-      <label for="vehicle2">是否有器官移植</label></li>
-      <li><input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-      <label for="vehicle3">过去2年内，是否有服用过利尿剂。是否有慢性心衰。是否因为肺病需要氧气</label></li>
-      <li><input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-      <label for="vehicle1">过去12个月内，是否有被诊断为心脏病，中风，短暂性脑缺血，小中风，或者内出血</label></li>
-      <li><input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-      <label for="vehicle2">是否确诊癌症，或者接受化疗/放疗</label></li>
-      <li><input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-      <label for="vehicle3">是否因为消化道疾病入院超过24小时</label></li>
+    <label class="desc" id="insured-elder-history-label" for="insured-elder-history">请勾选以下符合的选线（此标题和下方几行内容需要隐藏，在上面选“是”以后才显示）</label>
+    <ul id="insured-elder-history" name="insured-elder-history" class="insured" style="list-style: none;">
+      <li><input type="checkbox" id="insured-elder-history-1" name="insured-elder-history" value="history-1">
+      <label for="insured-elder-history-1">问是否有心脏搭桥或者瓣膜置换手术（10年内）</label></li>
+      <li><input type="checkbox" id="insured-elder-history-2" name="insured-elder-history" value="history-2">
+      <label for="insured-elder-history-2">问是否同时具有糖尿病和心脏病</label></li>
+      <li><input type="checkbox" id="insured-elder-history-3" name="insured-elder-history" value="history-3">
+      <label for="insured-elder-history-3">是否有器官移植</label></li>
+      <li><input type="checkbox" id="insured-elder-history-4" name="insured-elder-history" value="history-4">
+      <label for="insured-elder-history-4">过去2年内，是否有服用过利尿剂。是否有慢性心衰。是否因为肺病需要氧气</label></li>
+      <li><input type="checkbox" id="insured-elder-history-5" name="insured-elder-history" value="history-5">
+      <label for="insured-elder-history-5">过去12个月内，是否有被诊断为心脏病，中风，短暂性脑缺血，小中风，或者内出血</label></li>
+      <li><input type="checkbox" id="insured-elder-history-6" name="insured-elder-history" value="history-6">
+      <label for="insured-elder-history-6">是否确诊癌症，或者接受化疗/放疗</label></li>
+      <li><input type="checkbox" id="insured-elder-history-7" name="insured-elder-history" value="history-7">
+      <label for="insured-elder-history-7">是否因为消化道疾病入院超过24小时</label></li>
     </ul>
   </div>
 
-  <br>
+  <br><br>
     
   <div>
-    <label class="desc" id="title1" for="Field1">到达加拿大日期（改成日期格式）</label>
+    <label class="desc" id="arrival-date-label" for="arrival-date">到达加拿大日期（改成日期格式）</label>
     <div>
       <input id="Field1" name="Field1" type="text" class="field text fn" value="" size="20" tabindex="1">
     </div>
@@ -120,7 +127,7 @@
 
   <div>
     <div>
-      <input type="button" onclick="location.href='file:///Users/jiangshaohua/Desktop/%E6%88%91/%E5%B7%A5%E4%BD%9C/%E5%AE%B6%E4%B8%AD%E6%8E%A8%E8%8D%90/Lavie%20financial/%E9%A1%B9%E7%9B%AE1/Project/%E9%A1%B9%E7%9B%AE2-%E5%AE%A2%E6%88%B7%E7%94%B3%E8%AF%B7%E4%BF%9D%E5%8D%95/code/page_3.html'" value="上一页">
+      <input id="page-button-10" name="page-button-backward" type="button" class="page-button" onclick="location.href='file:///Users/jiangshaohua/Desktop/%E6%88%91/%E5%B7%A5%E4%BD%9C/%E5%AE%B6%E4%B8%AD%E6%8E%A8%E8%8D%90/Lavie%20financial/%E9%A1%B9%E7%9B%AE1/Project/%E9%A1%B9%E7%9B%AE2-%E5%AE%A2%E6%88%B7%E7%94%B3%E8%AF%B7%E4%BF%9D%E5%8D%95/code/page_3.html'" value="上一页">
       <input id="saveForm" name="saveForm" type="submit" value="提交">
     </div>
   </div>
