Editting id, class, name, and so on, in html

--- a/项目2-客户申请保单/code/访加旅客保险.html
+++ b/项目2-客户申请保单/code/访加旅客保险.html
@@ -24,7 +24,9 @@
 
   <br>
   <div id="insured-condition" class="insured" name="insured-condition" >
-    <label class="desc" id="insured-condition-list-label" for="insured-condition-list">请确保受保人是否满足以下条件：</label>
+    <label class="desc" id="insured-condition-list-label" for="insured-condition-list">
+      请确保受保人是否满足以下条件：
+    </label>
     <ol id="insured-condition-list" class="insured" name="insured-condition">
       <li id="insured-condition-1" class="insured" name="insured-condition">
         年龄在15-89岁
@@ -73,7 +75,9 @@
   <br><br>
 
   <div>
-    <label class="desc" id="insured-elder-history-label" for="insured-elder-history">请勾选以下符合的选线（此标题和下方几行内容需要隐藏，在上面选“是”以后才显示）</label>
+    <label class="desc" id="insured-elder-history-label" for="insured-elder-history">
+      请勾选以下符合的选线（此标题和下方几行内容需要隐藏，在上面选“是”以后才显示）
+    </label>
     <ul id="insured-elder-history" name="insured-elder-history" class="insured" style="list-style: none;">
       <li><input type="checkbox" id="insured-elder-history-1" name="insured-elder-history" value="history-1">
       <label for="insured-elder-history-1">问是否有心脏搭桥或者瓣膜置换手术（10年内）</label></li>
@@ -96,7 +100,6 @@
     
   <div>
     <label class="desc" id="arrival-date-label" for="arrival-date">到达加拿大日期（改成日期格式）</label>
-    // 从这里继续
     <div>
       <input id="arrival-date" name="arrival-date" type="text" class="date" value="" size="20" tabindex="1">
     </div>
