--- a/项目2-客户申请保单/code/page_2.html
+++ b/项目2-客户申请保单/code/page_2.html
@@ -45,56 +45,61 @@
     <br><br>
 
     <div>
-      <label class="desc" id="insured-birthdate-label" for="insured-birthdate">受保人生日（改成日期格式）</label>
+      <label class="desc" id="insured-birthdate-label" for="insured-birthdate">受保人生日</label>
       <div>
-        <input id="insured-birthdate" name="insured-birthdate" type="text" class="insured" value="" size="50" tabindex="1">
+        <input id="insured-birthdate" name="insured-birthdate" type="date" class="insured" value="" size="50" tabindex="1">
       </div>
     </div>
 
     <br><br>
 
     <div>
-      <label class="desc" id="insured-address-1-label" for="insured-address-1">加拿大地址（改成？）</label>
+      <label class="desc" id="insured-addres-label" for="insured-address">加拿大地址</label>
       <div>
-        <input id="insured-address-1" name="insured-address" type="text" class="insured" value="" size="50" tabindex="1">
+        <label>Street Address</label><br>
+        <input id="insured-street-address" name="insured-street-address" type="text" class="insured" value="" size="50" tabindex="1"><br>
+        <label>ZIP or postal code (optional)</label><br>
+        <input id="insured-zip" name="insured-zip" type="text" class="insured" value="" size="20" tabindex="1"><br>
+        <label>City</label><br>
+        <input id="insured-city" name="insured-city" type="text" class="insured" value="" size="50" tabindex="1"><br>
       </div>
     </div>
 
     <br><br>
 
     <div>
-      <label class="desc" id="insured-tel-1-label" for="insured-tel-1">加拿大电话（改成电话格式）</label>
+      <label class="desc" id="insured-tel-label" for="insured-tel">加拿大电话（改成电话格式）</label>
       <div>
-        <input id="insured-tel-1" name="insured-tel" type="text" class="insured" value="" size="50" tabindex="1">
+        <input id="insured-tel" name="insured-tel" type="tel" class="insured" placeholder="123-456-7890" value="" size="50" tabindex="1">
       </div>
     </div>
 
     <br><br>
       
     <div>
-      <label class="desc" id="insured-mail-1-label" for="insured-mail-1">
+      <label class="desc" id="insured-mail-label" for="insured-mail">
         联系邮箱
       </label>
       <div>
-        <input id="insured-mail-1" name="insured-mail" type="email" spellcheck="false" size="50" value="" maxlength="255" tabindex="1"> 
+        <input id="insured-mail" name="insured-mail" type="email" spellcheck="false" size="50" placeholder="google@gmail.com" value="" maxlength="255" tabindex="1"> 
      </div>
     </div>
 
     <br><br>
 
     <div>
-      <label class="desc" id="deceased-beneficiary-1-label" for="deceased-beneficiary-1">身故受益人（和姓名一样）</label>
+      <label class="desc" id="deceased-beneficiary-label" for="deceased-beneficiary">身故受益人（和姓名一样）</label>
       <div>
-        <input id="deceased-beneficiary-1" name="deceased-beneficiary" type="text" size="50" class="deceased-beneficiary" value="" size="8" tabindex="1">
+        <input id="deceased-beneficiary" name="deceased-beneficiary" type="text" size="50" class="deceased-beneficiary" value="" size="8" tabindex="1">
       </div>
     </div>
 
     <br><br>
 
     <div>
-      <label class="desc" id="relationship-insured-1-label" for="relationship-insured-1">与受保人关系（和姓名一样，可以长一点？）</label>
+      <label class="desc" id="relationship-insured-label" for="relationship-insured">与受保人关系（和姓名一样，可以长一点？）</label>
       <div>
-        <input id="relationship-insured-1" name="relationship-insured" type="text" class="deceased-beneficiary" value="" size="50" tabindex="1">
+        <input id="relationship-insured" name="relationship-insured" type="text" class="deceased-beneficiary" value="" size="50" tabindex="1">
       </div>
     </div>
 
@@ -108,11 +113,11 @@
         <div>
             <input id="add-insured" name="add-insured" type="hidden" value="">
             <div>
-                <input id="add-insured-yes" name="add-insured-choice" onclick="unhide1()" type="radio" value="First Choice" tabindex="1" checked="checked">
+                <input id="add-insured-yes" name="add-insured-choice" onclick="unhide1()" type="radio" value="First Choice" tabindex="1">
                 <label class="insured" for="add-insured-yes">是</label>
             </div>
           <div>
-              <input id="add-insured-no" name="add-insured-choice" onclick="rehide1()" type="radio" value="Second Choice" tabindex="2">
+              <input id="add-insured-no" name="add-insured-choice" onclick="rehide1()" type="radio" value="Second Choice" tabindex="2" checked="checked">
               <label class="insured" for="add-insured-no">否</label>
           </div>
         </div>
@@ -152,18 +157,18 @@
       <br><br>
 
       <div>
-        <label class="desc" id="added-insured-birthdate-label" for="added-insured-birthdate">受保人生日（改成日期格式）</label>
+        <label class="desc" id="added-insured-birthdate-label" for="added-insured-birthdate">受保人生日</label>
         <div>
-          <input id="added-insured-birthdate" name="added-insured-birthdate" type="text" class="added-insured" value="" size="50" tabindex="1">
+          <input id="added-insured-birthdate" name="added-insured-birthdate" type="date" class="added-insured" value="" size="50" tabindex="1">
         </div>
       </div>
 
       <br><br>
 
       <div>
-        <label class="desc" id="added-relationship-insured-1-label" for="added-relationship-insured-1">与受保人关系（和姓名一样，可以长一点？）</label>
+        <label class="desc" id="added-relationship-insured-1-label" for="added-relationship-insured-1">与受保人关系</label>
         <div>
-          <input id="added-relationship-insured-1" name="added-relationship-insured" type="text" class="added-deceased-beneficiary" value="" size="50" tabindex="1">
+          <input id="added-relationship-insured-1" name="added-relationship-insured" type="text" class="added-deceased-beneficiary" placeholder="例：父母、子女、配偶" value="" size="50" tabindex="1">
         </div>
       </div>
     </div>
