--- a/项目2-客户申请保单/code/访加旅客保险.html
+++ b/项目2-客户申请保单/code/访加旅客保险.html
@@ -99,27 +99,27 @@
   <br><br>
     
   <div>
-    <label class="desc" id="arrival-date-label" for="arrival-date">到达加拿大日期（改成日期格式）</label>
+    <label class="desc" id="arrival-date-label" for="arrival-date">到达加拿大日期</label>
     <div>
-      <input id="arrival-date" name="arrival-date" type="text" class="date" value="" size="20" tabindex="1">
+      <input id="arrival-date" name="arrival-date" type="date" class="date" value="" size="20" tabindex="1">
     </div>
   </div>
 
   <br><br>
 
   <div>
-    <label class="desc" id="effective-date-label" for="effective-date">保险生效日期（改成日期格式）</label>
+    <label class="desc" id="effective-date-label" for="effective-date">保险生效日期</label>
     <div>
-      <input id="effective-date" name="effective-date" type="text" class="insurance" value="" size="20" tabindex="1">
+      <input id="effective-date" name="effective-date" type="date" class="insurance" value="" size="20" tabindex="1">
     </div>
   </div>
 
   <br><br>
 
   <div>
-    <label class="desc" id="end-date-label" for="end-date">保险结束日期（改成日期格式）</label>
+    <label class="desc" id="end-date-label" for="end-date">保险结束日期</label>
     <div>
-      <input id="end-date" name="end-date" type="text" class="insurance" value="" size="20" tabindex="1">
+      <input id="end-date" name="end-date" type="date" class="insurance" value="" size="20" tabindex="1">
     </div>
   </div>
 
