--- a/项目2-客户申请保单/code/在加居民出境旅游保险.html
+++ b/项目2-客户申请保单/code/在加居民出境旅游保险.html
@@ -191,6 +191,9 @@
           <div id="additional-insurance-after" style="display:none;">
             <ul id="additional-insurance-list" name="additional-insurance-list" class="insurance" style="list-style: none;">
               <li><label>
+                <input type="checkbox" id="air-accident-insurance" name="additional-insurance" class="insurance">$0
+              </label></li>
+              <li><label>
                 <input type="checkbox" id="air-accident-insurance" name="additional-insurance" class="insurance">航空事故($20万/$50万)
               </label></li>
               <li><label>
