--- a/项目2-客户申请保单/code/结束.html
+++ b/项目2-客户申请保单/code/结束.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <h1>璋㈣阿</h1>
-  </head>
+  <form action="#">
+    <header>
+      <div><h1>谢谢您的参与</h1></div>
+      <!-- 新加 -->
+      <link rel="stylesheet" href="css/geeks.css">
+      <script type="text/javascript" src="js/app.js"></script>
+    </header>
+  </form>
 </html>
