--- a/项目2-客户申请保单/code/访加旅客保险.html
+++ b/项目2-客户申请保单/code/访加旅客保险.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-<form action="#">
+<form action="file:///Users/jiangshaohua/Desktop/%E6%88%91/%E5%B7%A5%E4%BD%9C/%E5%AE%B6%E4%B8%AD%E6%8E%A8%E8%8D%90/Lavie%20financial/%E9%A1%B9%E7%9B%AE1/Project/%E9%A1%B9%E7%9B%AE2-%E5%AE%A2%E6%88%B7%E7%94%B3%E8%AF%B7%E4%BF%9D%E5%8D%95/code/结束.html">
 
     <header>
       <h2>旅游保险信息表</h2>
@@ -10,7 +8,7 @@
       
       <!-- 新加 -->
       <link rel="stylesheet" href="css/geeks.css">
-      <script type="text/javascript" src="js/app.js"></script>
+      <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     </header>
     
     <h3>访加旅客保险</h3>
@@ -215,4 +213,3 @@
       insured_elder_yes_after.style.display="none";
     }
   </script>
-</html>
