创建local测试数据库，三个表格，基本的cols

--- a/项目2(ing)-客户申请保单/code/所有html合并尝试/my code/index.html
+++ b/项目2(ing)-客户申请保单/code/所有html合并尝试/my code/index.html
@@ -768,7 +768,7 @@
                 <div id="additional-insurance-after" style="display:none;">
                   <ul id="additional-insurance-list" name="additional-insurance-list" class="insurance" style="list-style: none;">
                     <li><label>
-                      <input type="checkbox" id="air-accident-insurance" name="additional-insurance" class="insurance">$0
+                      <input type="checkbox" id="no_insurance" name="additional-insurance" class="insurance">$0
                     </label></li>
                     <li><label>
                       <input type="checkbox" id="air-accident-insurance" name="additional-insurance" class="insurance">º½¿ÕÊÂ¹Ê($20Íò/$50Íò)
