--- a/项目2(ing)-客户申请保单/code/所有html合并尝试/my code/login.html
+++ b/项目2(ing)-客户申请保单/code/所有html合并尝试/my code/login.html
@@ -15,7 +15,7 @@
         <input type="text" required="required" placeholder="ÓÃ»§Ãû" name="u" ></input>  
         <input type="password" required="required" placeholder="ÃÜÂë" name="p"></input>
         <div style="text-align:center;">
-          <button class="but" type="submit" >µÇÂ¼</button>  
+          <button class="but" type="submit" style="text-align:center; margin: auto; ">µÇÂ¼</button>  
         </div>  
       </form>  
     </p>  
