将每一页的登录按钮和登录页面连接；整理文件夹

--- a/项目2(ing)-客户申请保单/code/login.html
+++ b/项目2(ing)-客户申请保单/code/login.html
@@ -12,8 +12,8 @@
     <p id="login">  
       <h1>Login</h1>
       <form action="https://travelinsurance.weplusfinancial.ca/travelinsurance/index.html" style="text-align:center;">
-        <input type="text" required="required" placeholder="用户名" name="u" ></input>  
-        <input type="password" required="required" placeholder="密码" name="p"></input>
+        <label><input type="text" required="required" placeholder="用户名" name="u" ></input></label>
+        <label><input type="password" required="required" placeholder="密码" name="p"></input></label>
         <div style="text-align:center;">
           <button class="but" type="submit" style="text-align:center; margin: auto; ">登录</button>  
         </div>  
