--- a/项目2(ing)-客户申请保单/code/存储数据尝试/数据转json尝试/index.html
+++ b/项目2(ing)-客户申请保单/code/存储数据尝试/数据转json尝试/index.html
@@ -2,6 +2,9 @@
 
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script>
+      
+    </script>
   </head>
 
   <table>
